--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ p {
 	position: absolute;
 	top: 45%;
 	left: 2%;
+	font-family: "Verdana";
 	font-size: 1.5em;
 	text-transform: uppercase;
 	color: #fff;
